force-app/main/default/objects/OI_Hierarchy_Level__c/OI_Hierarchy_Level__c.object-meta.xml
<CustomObject>
    <label>OI Hierarchy Level</label>
    <pluralLabel>OI Hierarchy Levels</pluralLabel>
    <nameField>
        <label>Hierarchy Level Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One configured level within a Hierarchy Definition (FR-002) — Hierarchy Accelerator epic (ADR-0022). Master-Detail to Definition: a level has no independent lifecycle from its owning definition.</description>
</CustomObject>