force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Hierarchy_Definition__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Definition__c</fullName>
    <label>Hierarchy Definition</label>
    <type>MasterDetail</type>
    <referenceTo>OI_Hierarchy_Definition__c</referenceTo>
    <relationshipName>OI_Hierarchy_Levels</relationshipName>
    <relationshipLabel>OI Hierarchy Levels</relationshipLabel>
</CustomField>