force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether every record path through this hierarchy must pass through this level (FR-002).</description>
</CustomField>