force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <label>Level Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <description>1-based position within the hierarchy (FR-002) — used to order levels for path display (FR-012) and to validate a relationship's Hierarchy_Level__c is consistent with its position.</description>
</CustomField>