force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The Salesforce object records at this level belong to (FR-002) — most hierarchies use one object throughout, but a level can differ (e.g. Dealer Group -> Dealer -> Branch, three different objects).</description>
</CustomField>