force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Relationship_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_Api_Name__c</fullName>
    <label>Relationship Field API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Informational only (FR-002) — the accelerator's actual parent/child linkage always lives in OI_Hierarchy_Relationship__c, never a native lookup field, so this documents which native field (if any) the admin considers this level conceptually tied to.</description>
</CustomField>