force-app/main/default/objects/OI_Hierarchy_Level__c/fields/Validation_Rule_Json__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Json__c</fullName>
    <label>Validation Rule Json</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Schemaless config bag for admin-defined per-level validation (FR-002) — mirrors OI_Graph_Node__c.Attributes_Json__c's precedent for admin-varying config the schema can't enumerate in advance.</description>
</CustomField>